--- a/cliente/public/index.html
+++ b/cliente/public/index.html
@@ -2,18 +2,18 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/atom.png" />
+  <link rel="icon" href="https://i.ibb.co/6styMZZ/logoCRM.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Proyecto integrador CRM enyoi" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/atom.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  <title>React App</title>
+  <title>CRM Products_SA</title>
 </head>
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  
   <div id="root"></div>
  
 </body>
