Products_SA-Front 8/03/23

--- a/cliente/public/index.html
+++ b/cliente/public/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://i.ibb.co/6styMZZ/logoCRM.png" />
+  <link rel="icon" href="https://i.ibb.co/Z8C5szj/Screenshot-2-removebg-preview.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Proyecto integrador CRM enyoi" />
